# star-ruler-2-mod-ce

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  TODOLIST.md  branch-descriptions.json  metadata.json  modinfo.txt
.github/workflows/: rust.yml
colonisation-expansion/: AUTHORS  LICENSE  modinfo.txt
colonisation-expansion/data/: empire_states.txt  game_config.txt  objects.txt  planet_levels.txt  settings.txt
data/: empire_states.txt
data/biomes/: atmosphere.txt  mountains.txt  photovoltics.txt  rock.txt
data/cargo/: LivingSpace.txt
data/constructions/: Bioengineering.txt  DevelopForest.txt  ExposeMoltenCore.txt  FloodRocks.txt  FracturedMoonBase.txt  MechanoidPopulation.txt  MeltIce.txt  SharePlanet.txt  TakePlanet.txt  Test.txt
data/design_stats/: base.txt  extra.txt
data/empires/: presets.txt
data/images/: light.png.kra  light.png~
data/materials/: CE_materials.txt
data/planet_types/: barren.txt  barren_desert.txt  barren_forest.txt  dyson_sphere.txt
data/research/: ce_grid.txt  heralds_grid.txt
data/statuses/: HydroponicsSatellite.txt
data/systems/: BaseSystem.txt
locales/english/: Colonisation Mod_abilities.txt  Colonisation Mod_artifacts.txt  Colonisation Mod_biomes.txt  Colonisation Mod_buildings.txt  Colonisation Mod_constructions.txt  Colonisation Mod_diplomacy.txt  Colonisation Mod_orbitals.txt  Colonisation Mod_research.txt  Colonisation Mod_resources.txt  Colonisation Mod_statuses.txt  Colonisation Mod_subsystems.txt  Colonisation Mod_traits.txt  ce_abilities.txt  ce_buildings.txt  ce_resources.txt  (+6 more)
src/: main.rs
(+1200 files in other folders)
