[package]
name = "ce-checks"
version = "0.1.0"
edition = "2021"
description = "CI sanity checks for colonisation expansion"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
